# aws-pick

./: CLAUDE.md  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
specs/001-aws-credential-selector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aws-credential-selector/checklists/: requirements.md
specs/001-aws-credential-selector/contracts/: cli-api.md  library-api.md
src/aws_pick/: __init__.py  __main__.py  exceptions.py
src/aws_pick/cli/: app.py
src/aws_pick/cli/commands/: favorites.py  history.py  preset.py  select.py
src/aws_pick/core/: environment.py  favorites.py  history.py  login.py  presets.py  selector.py
src/aws_pick/models/: account.py  config.py  selection.py
src/aws_pick/storage/: json_store.py
src/aws_pick/tui/: app.py
src/aws_pick/tui/screens/: confirm.py  help.py  preset_load.py  preset_save.py  progress.py  selector.py
src/aws_pick/tui/styles/: app.tcss
src/aws_pick/tui/widgets/: account_list.py  filter_bar.py  progress_item.py  status_bar.py
tests/: conftest.py
tests/contract/: test_api_contract.py
tests/integration/: test_cli.py  test_library_api.py  test_tui.py
tests/unit/: test_environment.py  test_favorites.py  test_history.py  test_json_store.py  test_login.py  test_models.py  test_presets.py  test_progress_item.py  test_selector.py
